overflow fix

--- a/frontend/css/shootingstars.css
+++ b/frontend/css/shootingstars.css
@@ -1,7 +1,3 @@
-body{
-  overflow-x: hidden;
-}
-
 @keyframes animateBg {
   0%,100%
   {
