--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -25,6 +25,7 @@
 }
 
 body {
+  overflow-x: hidden;
   background-color: var(--bg-color);
   /*display: flex;
   flex-flow: column; */
@@ -884,6 +885,10 @@ footer {
 /* MEDIA QUERIES */
 
 @media screen and (max-width: 768px) {
+
+  .body {
+    overflow-x: hidden;
+  }
   .logo img {
     width: 25vw;
     margin-right: 10vw;
